# fidget-toy

./: .gitignore  README.md  index.html  install-arch.sh  install.ps1  install.sh  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
.github/workflows/: release.yml
scripts/: setup-updater-secrets.sh
src/: main.ts  settings-ui.ts  settings.css  settings.ts  styles.css  update.ts
src-tauri/: Cargo.toml  fidget-updater.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
